--- a/app/src/main/res/layout/activity_combo_providers.xml
+++ b/app/src/main/res/layout/activity_combo_providers.xml
@@ -1,36 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:background="@drawable/managerbg"
+    android:orientation="vertical"
     tools:context="com.example.bhargavbv.eventmanager.ComboProvidersActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
+    <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/appbar_padding_top"
-        android:background="@color/coloropacity">
+        android:layout_height="0dp"
+        android:background="@color/purpledark"
+        android:id="@+id/toolbar"
+        android:layout_weight="1">
+    </android.support.v7.widget.Toolbar>
 
+    <android.support.design.widget.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="end"
+        android:layout_weight="1"
+        android:id="@+id/tabs">
 
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
-            android:background="@color/coloropacity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.TabLayout>
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_height="0dp"
+        android:layout_weight="7"
+        android:id="@+id/container"/>
 
 
-</android.support.design.widget.CoordinatorLayout>
+
+</LinearLayout>
