--- a/app/src/main/res/layout/activity_service_providers_info.xml
+++ b/app/src/main/res/layout/activity_service_providers_info.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/back_gradient"
+    android:background="@drawable/background"
     tools:context=".Authentication.ServiceProvidersInfo">
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -15,20 +15,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/back_gradient"
+    android:background="@drawable/background_service"
     tools:context=".Authentication.ServiceProvidersInfo">
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/purpledark"
+        android:id="@+id/toolbar"
+        android:layout_weight="1">
+    </android.support.v7.widget.Toolbar>
+
     <ImageView
         android:id="@+id/imgview"
-        android:layout_width="218dp"
-        android:layout_height="216dp"
-        android:background="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:layout_gravity="center_horizontal"
-        />
+        android:background="#ffffff"
+        android:src="@drawable/profilepic" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="COMPANY NAME"
-        android:textColor="#ba000d"
+        android:textColor="#ffffff"
         android:id="@+id/compname"
         android:textAlignment="center"
         android:textSize="36dp"
@@ -36,34 +46,32 @@
     <EditText
         android:id="@+id/compdescp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
+        android:inputType="textMultiLine"
+        android:lines="4"
+        android:maxLines="10"
+        android:minLines="2"
         android:text="Company Description"
         android:textSize="24dp"
-        android:textColor="#bc5206"
-        android:textAlignment="center"/>
-    <EditText
-        android:id="@+id/servc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Services Proviided by the company"
-        android:textSize="24dp"
-        android:textColor="#bc5206"
+        android:textColor="#ffffff"
         android:textAlignment="center"/>
 
     <EditText
         android:id="@+id/loc"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Location:"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:text="Address:"
         android:textSize="24dp"
-        android:textColor="#bc5206"/>
+        android:textColor="#ffffff"/>
     <EditText
         android:id="@+id/contact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Contact no."
+        android:gravity="center"
         android:textSize="24dp"
-        android:textColor="#bc5206"/>
+        android:textColor="#ffffff"/>
 
     <HorizontalScrollView
         android:layout_width="wrap_content"
@@ -73,20 +81,6 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/background"
-
-                />
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/background"
-                />
         </LinearLayout>
     </HorizontalScrollView>
 
@@ -94,7 +88,9 @@
         android:id="@+id/submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit"/>
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
+        android:text="Next" />
 
 </LinearLayout>
 </ScrollView>
